<resources>
    <string name="app_name" translatable="false">DiabeTOOL</string>
    <!--<string name="navigation_drawer_open">Open navigation panel</string>-->
    <string name="a_db_add_notification_added">Product added</string>
    <string name="a_db_add_title">Add product</string>
    <string name="a_db_title">Product database</string>
    <string name="a_mainmenu_about">About me</string>
    <string name="a_mainmenu_calc">Calculator</string>
    <string name="a_mainmenu_db">Product database</string>
    <string name="a_mainmenu_mealcomposer">Meal composer</string>
    <string name="a_mainmenu_profile">Profile</string>
    <string name="a_mainmenu_title" translatable="false">DiabeTOOL</string>
    <string name="a_mainmenu_tutorials">Tutorials</string>
    <string name="action_settings">Settings</string>
    <string name="add_own">Add custom</string>
    <!--<string name="carbohydrates_c">Carbohydrates</string>-->
    <string name="digitset_float" translatable="false">0123456789.</string>
    <string name="f_product_custom_add_energyvalue">Energy value</string>
    <string name="f_product_custom_add_name">Product name</string>
    <string name="f_product_custom_add_title">Custom product creation</string>
    <string name="f_product_custom_add_warning">Tip: Please, input accurate data. If you`re unsure about some field just leave it blank.</string>
    <string name="f_product_custom_add_warning_empty">Can`t be empty!</string>
    <string name="f_productinfo_name">Product: %1$s</string>
    <string name="f_productinfo_barcode">Barcode: %1$s</string>
    <string name="f_productinfo_barcode_unspecified">Barcode is not specified.</string>
    <string name="f_productinfo_carbohydrates">Carbohydrates: %1$s%2$s</string>
    <string name="f_productinfo_energyvalue">E. val.: %1$s%2$s</string>
    <string name="f_productinfo_fat">Fat: %1$s%2$s</string>
    <string name="f_productinfo_proteins">Proteins: %1$s%2$s</string>
    <string name="f_productinfo_roughage">Roughage: %1$s%2$s</string>
    <string name="f_productinfo_sugar">Sugar: %1$s%2$s</string>
    <string name="f_productinfo_ww">BU: %s</string>
    <string name="f_productinfo_wbt">PFU: %s</string>
    <string name="f_productinfo_unit_gram_short_dotted">g.</string>
    <string name="f_productinfo_unit_kcal_short_dotted">kcal.</string>
    <string name="f_productinfo_unknwn_contents">no data…</string>
    <string name="adapter_simple_portions_header" formatted="false">%s: %s gram.</string>
    <string name="adapter_meal_cursor_header" formatted="false">%s: %s gram.</string>
    <!--<string name="nav_about">About me</string>-->
    <string name="nav_calc">Calculator</string>
    <string name="nav_db">Database</string>
    <string name="nav_donations">Donations</string>
    <string name="nav_meal_composer">Meal composition</string>
    <string name="nav_profile_edit">Profile edit</string>
    <string name="navigation_drawer_close">Close navigation panel</string>
    <string name="placeholder" translatable="false">Placeholder</string>
    <string name="title_activity_activity_calculator">Calculator</string>
    <string name="title_activity_database_edit_product">Edit product</string>
    <string name="title_activity_meal_composer">Meal Composer</string>
    <string name="title_activity_meals_database">Meal Database</string>
    <string name="title_tutorial_detail">Tutorial Detail</string>
    <string name="title_tutorial_list">Tutorials</string>
    <string name="unit_gram">gram</string>
    <string name="warning_cant_be_empty">Can`t be empty.</string>
    <string name="universal_cancel">Cancel</string>
    <string name="universal_ok" translatable="false">OK</string>
    <string name="product_creation_unknwn_contents">unknown weight</string>
    <string name="product_creation_unknwn_barcode">unknown barcode</string>
    <string name="a_mainmenu_faq">Frequently asked questions</string>
    <string name="a_mainmenu_db_management">Manage database</string>
    <string name="title_activity_db_management">Manage database</string>
    <string name="title_activity_faq">Frequently asked questions</string>
    <string name="settings_erase_database_button">Erase Database</string>
    <string name="settings_database_removal_hint">In case of problems with database getting corrupt. You can erase the database here at anytime. Database will redownload itself after leaving this screen.</string>
    <string name="nav_about">About me</string>
    <string name="settings_database_removal_in_use_hint">Do not erase while updater is running.</string>
    <string name="db_add_to_favourites">Add to favourites</string>
    <string name="mc_contextmenu_edit_weight">Edit weight</string>
    <string name="mc_contextmenu_delete">Delete</string>
    <string name="db_contextmenu_add_to_favourites">Add to favourites</string>
    <string name="db_contextmenu_view">View</string>
    <string name="db_contextmenu_edit">Edit</string>
    <string name="db_contextmenu_delete">Delete</string>
    <string name="db_action_add_custom">Add custom</string>
    <string name="db_action_change_weights">Change weights</string>
    <string name="db_action_show_favourites">Show favourites</string>
    <string name="db_action_show_only_mine">Show only mine</string>
    <string name="mc_action_add_ingredient">Add ingredient</string>
    <string name="mc_action_save">Save</string>
    <string name="meal_db_show_favourites">Show favourites</string>
    <string name="meal_db_show_only_own">Show only custom</string>
    <string name="mc_meal_name">Meal name:</string>
    <string name="calc_activity_input_given_values">Input given values</string>
    <string name="calc_activity_carbohydrates">Carbohydrates:</string>
    <string name="calc_activity_proteins">Proteins:</string>
    <string name="calc_activity_fat">Fat:</string>
    <string name="roughage">Roughage</string>
    <string name="caffeine">Caffeine</string>
    <string name="barcode">Barcode</string>
    <string name="values_for">Values for</string>
    <string name="g_of_product">g. of product.</string>
    <string name="f_edit_product_save">Save product</string>
    <string name="meal_db_actions_compose_own_meal">Compose own meal</string>
    <string name="faq_what_is_ww_wbt">Co oznacza skrót WW i WBT?</string>
    <string name="faq_what_is_ww_wbt_explanation">WW to wymienniki węglowodanowe a WBT to wymienniki białkowo tłuszczowe.</string>
    <string name="faq_how_ww_wbt_is_counted">W jaki sposób obliczane jest WW i WBT?</string>
    <string name="faq_how_ww_wbt_is_counted_explanation">WW jest równe ilości węglowodanów podzielonej przez 10, natomiast WBT (tłuszcze * 9 + białko * 4) / 100.</string>
    <string name="faq_why_does_app_need_net">Aplikacja wymaga dostępu do internetu, w jakim celu?</string>
    <string name="faq_why_does_app_need_net_explanation">Głównie w celu aktualizacji bazy produtków, zbierane są również dane o produktach dodawanych, usuwanych lub edytowanych przez użytkowników w celu poprawy jakości bazy danych.</string>
    <string name="faq_db_update_when_does_it_happen">Kiedy następuje aktualizacja bazy danych na urządzeniu?</string>
    <string name="faq_db_update_when_does_it_happen_explanation">Aktualizacja odbywa się zawsze przy przejściu przez menu główne i nie wymaga ingerencji użytkownika.</string>
    <string name="faq_can_i_disable_reporting">Czy mogę wyłączyć opcję przekazywania danych o moich produktach do bazy centralnej?</string>
    <string name="faq_can_i_disable_reporting_explanation">Takiej opcji niema, dołożone zostały wszelkie starania by przesył danych był możliwie minimalny i nie zaburzał pracy aplikacji, ani nie zużywał zbyt wiele energii. Dane są wysyłane anonimowo.</string>
    <string name="faq_will_i_be_able_to_disable_reporter">Czy taka opcja pojawi się w przyszłości?</string>
    <string name="faq_will_i_be_able_to_disable_reporter_explanation">Zapewne tak. Opcja ta jest wstępnie niedostępna ze względu na wysokie zapotrzebowanie źródeł weryfikacji bazy danych.</string>
    <string name="faq_can_i_help_with_db">Czy mogę jakoś pomóc w kompletowaniu bazy produktów?</string>
    <string name="faq_can_i_help_with_db_explanation">Tak, wystarczy że dodasz brakujący produkt lub edytujesz wartości w obecnym na prawdziwe. Wszystkie dodane produkty trafiają na centralną bazę gdzie są weryfikowane i jeśli zostaną zatwierdzone trafiają do publicznej bazy dostępnej dla użytkowników.</string>
    <string name="faq_can_i_help_with_app_design">Czy mogę jakoś pomóc w tworzeniu funkcjonalności aplikacji?</string>
    <string name="faq_can_i_help_with_app_design_explanation">Tak, wszelkie sugestie można zostawiać w komentarzach na Sklepie Play.</string>
    <string name="faq_is_db_data_accurate">Czy dane w bazie produktów są dokładne?</string>
    <string name="faq_is_db_data_accurate_explanation">Jako jedyna osoba pracująca nad projektem nie jestem w stanie dać takiej gwarancji, aczkolwiek wartości są mocno zbliżone do prawdziwych.</string>
    <string name="faq_how_was_the_db_made">Na jakiej podstawie zostały opracowane wstępne wartości produktów w bazie?</string>
    <string name="faq_how_was_the_db_made_explanation">Skompletowanie bazy zostało powierzone osobie spoza projektu.</string>
    <string name="calc_proteins">Proteins:</string>
    <string name="calc_activity_ww">WW</string>
    <string name="calc_activity_wbt">WBT:</string>
    <string name="meal_db_search">Search</string>
    <string name="f_product_name_maxlenght">64 characters max</string>
    <string name="proteins">Białko</string>
    <string name="fat">Fat</string>
    <string name="sugar">Sugar</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="nav_my_meals">My meals</string>
    <string name="product_interaction_cancelled_not_saved">Cancelled, no data is saved</string>
    <string name="dialog_input_weight">Input weight</string>
    <string name="dialog_input_proper_values_warning">Please input proper value</string>
    <string name="dialog_delete_header">Deleting...</string>
    <string name="dialog_delete_body">Are you sure?</string>
    <string name="database_action_delete_favourite">Delete from favourites</string>
    <string name="meal_db_action_delete_favourite">Delete from favourites</string>
    <string name="database_toast_select_product_first">Select product from list first</string>
    <string name="mc_toast_ingredient_deleted">Ingredient deleted</string>
    <string name="mc_add_ingredients_warning">Add some ingredients</string>
    <string name="mc_toast_meal_edited">Meal edited</string>
    <string name="mc_toast_meal_needs_name">Name a meal</string>
    <string name="mc_edit_title">Edit meal</string>
    <string name="mc_add_title">Add meal</string>
    <string name="reporter_toast_successfull_product_upload">"Successfuly uploaded product: "</string>
    <string name="db_updater_downloading_batch_of_products">"DUS lenght: "</string>
    <string name="db_updater_connection_error">DUS Connection error</string>
    <string name="db_updater_downloading_done">Database update complete</string>
</resources>