<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<item android:id="@+id/meal_database_action_setWeight"-->
        <!--android:title="Zmień wagi"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:checkable="false"-->
        <!--app:showAsAction="ifRoom" />-->
    <item android:id="@+id/compose_own"
        android:title="@string/meal_db_actions_compose_own_meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="false" />
    <group android:checkableBehavior="single">
        <item android:id="@+id/database_meals_action_showFavourites"
            android:title="@string/meal_db_show_favourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true" />
        <item android:id="@+id/database_meals_action_showOnlyOwn"
            android:title="@string/meal_db_show_only_own"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true" />
    </group>
</menu>