<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:theme="@style/AppTheme"
    android:background="@color/b500">

    <LinearLayout
        android:id="@+id/c_header"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">
        <TextView
            android:id="@+id/f_productinfo_name"
            android:text="@string/f_productinfo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/htwhite" />
    </LinearLayout>

    <kopacz.diabetool.FloatInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/htwhite"
        android:gravity="center_horizontal"
        android:digits="@string/digitset_float"
        android:id="@+id/f_input"
        android:layout_marginTop="5sp"
        android:text="0"
        android:visibility="visible"
        android:textSize="24sp"
        tools:ignore="HardcodedText" />

    <include layout="@layout/generic_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include layout="@layout/generic_ww_wbt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <!--android:gravity="center_vertical"-->
        <Button
            android:id="@+id/cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/universal_cancel"
            android:background="@drawable/button1"
            android:layout_marginEnd="5dp"
            android:textSize="20sp"
            android:layout_marginRight="5dp"
            android:layout_height="match_parent"
            android:minHeight="4dp" />

        <Button
            android:id="@+id/accept"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/universal_ok"
            android:background="@drawable/button1"
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_height="match_parent"
            android:minHeight="4dp" />
    </LinearLayout>

</LinearLayout>